re PR c++/20563 (Infinite loop in diagnostic (and ice after error message))

PR c++/20563
	* parser.c (cp_parser_label_declaration): Deal with invalid/missing
	identifiers.

	* g++.dg/ext/label4.C: New test.

From-SVN: r101875